[metadata]
name = wechatpay-py
version = 0.0.1
author = Gudong Coding
author_email = opensource@gudong.run
description = A python implementation for wechatpay-apiv3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gudong-coding/wechatpay-py
project_urls =
    Bug Tracker = https://github.com/gudong-coding/wechatpay-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp
    orjson
    pybase64
    pycryptodome

[options.packages.find]
where = src